--- a/app/index.html
+++ b/app/index.html
@@ -73,7 +73,7 @@
       <p>These loving and deserving pets need a home. Please help us find a place for them. Click on their photo for more information.</p>
       <script id="dashboard-template" type="text/x-handlebars-template">
         {{#each dashboard}}
-          <div class="col-md-2 col-sm-3 col-xs-4 openpetmodal" data-toggle="modal" data-target="#wisdompetmodal" data-petname="{{project}}" data-petbreed="{{breed}}" data-petowner="{{owner}}" data-petinfo="{{description}}" data-petimage="{{filename}}">
+          <div class="col-md-2 col-sm-3 col-xs-4 openprojectmodal" data-toggle="modal" data-target="#wisdompetmodal" data-petname="{{project}}" data-petbreed="{{breed}}" data-petowner="{{owner}}" data-petinfo="{{description}}" data-petimage="{{filename}}">
             <img class="img-circle" src="images/inspiration/{{filename}}_tn.jpg" alt="{{project}} photo"/>
           </div><!-- column -->
         {{/each}}
@@ -88,7 +88,7 @@
 
       <script id="projects-template" type="text/x-handlebars-template">
         {{#each projects}}
-        <div class="appointment media openpetmodal" data-toggle="modal" data-target="#wisdompetmodal" data-petname="{{project}}" data-petbreed="{{breed}}" data-petowner="{{owner}}" data-petinfo="{{reason}}" data-petimage="{{filename}}">
+        <div class="appointment media openprojectmodal" data-toggle="modal" data-target="#wisdompetmodal" data-petname="{{project}}" data-petbreed="{{breed}}" data-petowner="{{owner}}" data-petinfo="{{reason}}" data-petimage="{{filename}}">
           <div class="media-left media-top">
             <img class="media-object appointment-img img-rounded" src="images/inspiration/{{filename}}_tn.jpg" alt="{{project}} photo">
           </div><!-- media-left media-top -->
@@ -97,7 +97,7 @@
             <div class="appointment-owner"><span class="appointment-owner-title">Owner: </span> <span class="appointment-owner-name">{{owner}}</span></div>
             <div class="appointment-reason">{{reason}}</div>
           </div><!-- media-body -->
-        </div><!-- appointment media openpetmodal -->
+        </div><!-- appointment media openprojectmodal -->
         {{/each}}
       </script>
       <div id="projects-content"></div>
@@ -108,9 +108,9 @@
       <h2 class="page-headline">Contact</h2>
       <script id="contact-template" type="text/x-handlebars-template">
         {{#each contact}}
-        <div class="appointment media openpetmodal" data-toggle="modal" data-target="#wisdompetmodal" data-petname="{{name}}" data-petbreed="{{job}}" data-petowner="{{domain}}" data-petinfo1="{{qual1}}" data-petinfo2="{{qual2}}" data-petimage="{{filename}}">
+        <div class="appointment media openprojectmodal" data-toggle="modal" data-target="#wisdompetmodal" data-petname="{{name}}" data-petbreed="{{job}}" data-petowner="{{domain}}" data-petinfo1="{{qual1}}" data-petinfo2="{{qual2}}" data-petimage="{{filename}}">
           <div class="media-left media-top">
-            <img class="media-object appointment-img img-rounded" src="images/inspiration/{{filename}}_tn.jpg" alt="{{name}} photo">
+            <img class="media-object appointment-img img-rounded" src="images/inspiration/{{filename}}.jpg" alt="{{name}} photo">
           </div><!-- media-left media-top -->
           <div class="media-body">
             <h3 class="media-heading projects-heading">{{name}}<p class="appointment-breed">{{job}}</p></h3>
@@ -120,7 +120,7 @@
               <p class="appointment-owner-title">{{contact}}@{{domain}}.com</p></div>
 
           </div><!-- media-body -->
-        </div><!-- appointment media openpetmodal -->
+        </div><!-- appointment media openprojectmodal -->
         {{/each}}
       </script>
       <div id="contact-content"></div>
