--- a/app/index.html
+++ b/app/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Progressive Web Apps</title>
-    <link rel="stylesheet" href="/css/app.css">
+    <title>Mick White Developer</title>
+    <link rel="stylesheet" href="/css/app.min.css">
     <link rel="manifest" href="/manifest.json">
 
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
 
-    <meta name="apple-mobile-web-app-title" content="Wisdom Pet">
+    <meta name="apple-mobile-web-app-title" content="Mick White">
     <meta name="apple-touch-icon" content="images/icons/icon-152x152.png">
 
     <meta name="msapplication-TileImage" content="images/icons/icon-144x144.png">
@@ -43,8 +43,8 @@
             <div class="collapse navbar-collapse" id="collapse">
                 <ul class="nav navbar-nav navbar-right">
                     <li><img class="reload reloadbtn" src="images/icons/icon_reload.svg" alt="Reload Button"/></li>
-                    <li class="active"><a href="#slideshow">Home</a></li>
-                    <li><a href="#dashboard">Dashboard</a></li>
+                    <li><a href="#slideshow">Home</a></li>
+                    <li class="active"><a href="#dashboard">Dashboard</a></li>
                     <li><a href="#projects">Projects</a></li>
                     <li><a href="#contact">Contact</a></li>
                 </ul>
@@ -72,14 +72,13 @@
     <div class="page" id="dashboard">
         <div class="container">
             <h2 class="page-headline">Dashboard</h2>
-            <p>These loving and deserving pets need a home. Please help us find a place for them. Click on their photo
-                for more information.</p>
+            <p>short and longterm stats of my current code trends and usage</p>
             <script id="dashboard-template" type="text/x-handlebars-template">
                 {{#each dashboard}}
                 <div class="col-md-2 col-sm-3 col-xs-4 openprojectmodal" data-toggle="modal"
-                     data-target="#wisdompetmodal" data-petname="{{project}}" data-petbreed="{{breed}}"
-                     data-petowner="{{owner}}" data-petinfo="{{description}}" data-petimage="{{filename}}">
-                    <img class="img-circle" src="images/inspiration/{{filename}}_tn.jpg" alt="{{project}} photo"/>
+                     data-target="#foliomodal" data-name="{{name}}" data-extLink="{{link}}" data-info="{{description}}"
+                     data-image="{{filename}}">
+                    <img class="img-circle" src="images/inspiration/{{filename}}_tn.jpg" alt="{{name}} photo"/>
                 </div><!-- column -->
                 {{/each}}
             </script>
@@ -89,23 +88,24 @@
     <div class="page" id="projects">
         <div class="container">
             <h2 class="page-headline">Projects</h2>
-            <p>Here's the pets that came in this week for an appointment. Click on a pet's photo for more info.</p>
+            <p>Collection of websites, webapps and other code projects. This list does not include any commercially
+                sensistive work as per confidentiality agreements and i have attempted to display a sampek of each of my
+                skill experiences or strengths...</p>
 
             <script id="projects-template" type="text/x-handlebars-template">
                 {{#each projects}}
-                <div class="appointment media openprojectmodal" data-toggle="modal" data-target="#wisdompetmodal"
-                     data-petname="{{project}}" data-petbreed="{{breed}}" data-petowner="{{owner}}"
-                     data-petinfo="{{reason}}" data-petimage="{{filename}}">
+                <div class="appointment media openprojectmodal" data-toggle="modal" data-target="#projectmodal"
+                     data-name="{{project}}" data-type="{{type}}" data-link="{{link}}"
+                     data-brief="{{brief}}" data-outcome="{{outcome}}" data-image="{{filename}}">
                     <div class="media-left media-top">
                         <img class="media-object appointment-img img-rounded"
                              src="images/inspiration/{{filename}}_tn.jpg" alt="{{project}} photo">
                     </div><!-- media-left media-top -->
                     <div class="media-body">
-                        <h3 class="media-heading projects-heading">{{project}}, <span class="appointment-breed">{{breed}}</span>
+                        <h3 class="coral media-heading projects-heading">{{project}}
+                            <span class="black smallest project-type">- {{type}}</span>
                         </h3>
-                        <div class="appointment-owner"><span class="appointment-owner-title">Owner: </span> <span
-                                class="appointment-owner-name">{{owner}}</span></div>
-                        <div class="appointment-reason">{{reason}}</div>
+                        <div class="appointment-owner"><span class="appointment-owner-title">Project brief: </span><span class="appointment-owner-name">{{brief}}</span></div>
                     </div><!-- media-body -->
                 </div><!-- appointment media openprojectmodal -->
                 {{/each}}
@@ -118,16 +118,16 @@
             <h2 class="page-headline">Contact</h2>
             <script id="contact-template" type="text/x-handlebars-template">
                 {{#each contact}}
-                <div class="appointment media openprojectmodal" data-toggle="modal" data-target="#wisdompetmodal"
-                     data-petname="{{name}}" data-petbreed="{{job}}" data-petowner="{{domain}}"
+                <div class="appointment media openprojectmodal" data-toggle="modal" data-target="#foliomodal"
+                     data-petname="{{name}}" data-job="{{job}}" data-petowner="{{domain}}"
                      data-petinfo1="{{qual1}}" data-petinfo2="{{qual2}}" data-petinfo3="{{qual3}}"
-                     data-petimage="{{filename}}">
+                     data-sampleimage="{{filename}}">
                     <div class="media-left media-top">
                         <img class="media-object appointment-img img-rounded" src="images/inspiration/{{filename}}.jpg"
                              alt="{{name}} photo">
                     </div><!-- media-left media-top -->
                     <div class="media-body">
-                        <h3 class="media-heading projects-heading">{{name}}<p class="appointment-breed">{{job}}</p></h3>
+                        <h3 class="media-heading projects-heading">{{name}}<p class="project-type">{{job}}</p></h3>
                         <div class="appointment-owner">
                             <p class="appointment-owner-name">{{qual1}}</p>
                             <p class="appointment-owner-name">{{qual2}}</p>
@@ -137,9 +137,6 @@
                             <p><span class="appointment-reason">{{cta}}:</span>
                                 <span class="appointment-owner-title">{{contact}}@{{domain}}.com</span></p>
                         </div>
-
-
-
                     </div><!-- media-body -->
                 </div><!-- appointment media openprojectmodal -->
                 {{/each}}
@@ -149,18 +146,38 @@
     </div><!-- page-contact -->
 </main>
 
-<div class="modal fade" id="wisdompetmodal" tabindex="-1" role="dialog" aria-labelledby="petModal">
+<div class="modal fade" id="foliomodal" tabindex="-1" role="dialog" aria-labelledby="thatModal">
     <div class="modal-dialog" data-dismiss="modal" aria-label="Close" role="document">
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" arial-label="Close" role="document"><span
                         aria-hidden="true">&times;</span></button>
-                <h2 class="modal-title modal-petname"></h2>
-                <div class="modal-petbreed"></div>
+                <h2 class="modal-title modal-name"></h2>
+                <div class="modal-type"></div>
             </div><!-- modal header -->
             <div class="modal-body">
-                <img class="img-responsive modal-petimage"/>
-                <p class="modal-petinfo"></p>
+                <p class="modal-info"></p>
+                <img class="img-responsive modal-image"/>
+            </div><!--modal-body-->
+        </div><!-- modal content -->
+    </div><!-- modal dialog -->
+</div><!-- modal fade -->
+
+<div class="modal fade" id="projectmodal" tabindex="-1" role="dialog" aria-labelledby="thisModal">
+    <div class="modal-dialog" data-dismiss="modal" aria-label="Close" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" arial-label="Close" role="document"><span
+                        aria-hidden="true">&times;</span></button>
+                <div class="h2"><span class="modal-title modal-name"></span> : <span class="modal-type"></span>
+                    <span class="float-right"><a class="modal-link" target="_blank">link</a></span>
+                </div>
+
+            </div><!-- modal header -->
+            <div class="modal-body">
+                <p class="modal-brief"></p>
+                <p class="modal-outcome"></p>
+                    <img class="img-responsive modal-image"/>
             </div><!--modal-body-->
         </div><!-- modal content -->
     </div><!-- modal dialog -->
