--- a/app/index.html
+++ b/app/index.html
@@ -88,19 +88,9 @@
     <div class="page" id="projects">
         <div class="container">
             <h2 class="page-headline">Projects</h2>
-            <p>Collection of website and webapp projects. This list does not include any commercially
-                sensistive work as per confidentiality agreements and i have attempted to display a sample of each of my
+            <p>Collection of website and webapp projects. A sample of each of my
                 skill experiences or strengths...</p>
-            <script id="dashboard-template" type="text/x-handlebars-template">
 
-                <div class="accordian">
-                <ul>
-                    {{#each code}}
-                    <li>{{codeType}}</li>
-                    {{/each}}
-                </ul>
-            </div>
-            </script>
             <script id="projects-template" type="text/x-handlebars-template">
                 {{#each projects}}
                 <div class="appointment media openprojectmodal" data-toggle="modal" data-target="#projectmodal"
