implement git chart

--- a/app/index.html
+++ b/app/index.html
@@ -170,23 +170,23 @@
                         <li>Sat</li>
                     </ul>
                     <ul class="squares"></ul>
-                    <div class="legend-wrapper">
-                        <div class="description">A summary of my daily pull requests, issues opened, and commits.
-                            (GITLAB)
-                        </div>
-                        <div class="contrib-legend text-gray"> Less
-                            <ul class="legend">
-                                <li style="background-color: #ffedcc"></li>
-                                <li style="background-color: #ffdb99"></li>
-                                <li style="background-color: #ffc966"></li>
-                                <li style="background-color: #ffb732"></li>
-                                <li style="background-color: #ffa500"></li>
-                            </ul>
-                            More
-                        </div>
+
+                </div>
+                <div class="legend-wrapper">
+                    <div class="description">A summary of my daily pull requests, issues opened, and commits.
+                        (GITLAB)
+                    </div>
+                    <div class="contrib-legend text-gray"> Less
+                        <ul class="legend">
+                            <li style="background-color: #ffedcc"></li>
+                            <li style="background-color: #ffdb99"></li>
+                            <li style="background-color: #ffc966"></li>
+                            <li style="background-color: #ffb732"></li>
+                            <li style="background-color: #ffa500"></li>
+                        </ul>
+                        More
                     </div>
                 </div>
-
             </div><!--modal-body-->
         </div><!-- modal content -->
     </div><!-- modal dialog -->
@@ -228,6 +228,7 @@
     </div><!-- modal dialog -->
 </div><!-- modal fade -->
 
+<!--<script src="js/jquery.min.js"></script>-->
 <script src="js/app.js"></script>
 </body>
 </html>
