--- a/app/index.html
+++ b/app/index.html
@@ -146,6 +146,7 @@
     </div><!-- page-contact -->
 </main>
 
+
 <!-- MODALS  -->
 <div class="modal fade" id="gitModal" tabindex="-1" role="dialog" aria-labelledby="thatModal">
     <div class="modal-dialog" data-dismiss="modal" aria-label="Close" role="document">
@@ -178,11 +179,11 @@
                     </div>
                     <div class="contrib-legend text-gray"> Less
                         <ul class="legend">
-                            <li style="background-color: #ffedcc"></li>
-                            <li style="background-color: #ffdb99"></li>
-                            <li style="background-color: #ffc966"></li>
-                            <li style="background-color: #ffb732"></li>
-                            <li style="background-color: #ffa500"></li>
+                            <li class="color-1"></li>
+                            <li class="color-2"></li>
+                            <li class="color-3"></li>
+                            <li class="color-4"></li>
+                            <li class="color-5"></li>
                         </ul>
                         More
                     </div>
@@ -191,6 +192,44 @@
         </div><!-- modal content -->
     </div><!-- modal dialog -->
 </div><!-- modal fade -->
+
+<div class="modal fade" id="pieModal" tabindex="-1" role="dialog" aria-labelledby="thatModal">
+    <div class="modal-dialog" data-dismiss="modal" aria-label="Close" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" arial-label="Close" role="document"><span
+                        aria-hidden="true">&times;</span></button>
+                <h2 class="modal-title modal-name"></h2>
+                <div class="modal-type"></div>
+            </div><!-- modal header -->
+            <div class="modal-body">
+                <p class="modal-info"></p>
+                <div class="pieContainer">
+                    <div class="pieBackground"></div>
+                    <div id="pieSlice1" class="hold">
+                        <div class="pie"></div>
+                    </div>
+                    <div id="pieSlice2" class="hold">
+                        <div class="pie"></div>
+                    </div>
+                    <div id="pieSlice3" class="hold">
+                        <div class="pie"></div>
+                    </div>
+                    <div id="pieSlice4" class="hold">
+                        <div class="pie"></div>
+                    </div>
+                    <div id="pieSlice5" class="hold">
+                        <div class="pie"></div>
+                    </div>
+                    <div id="pieSlice6" class="hold">
+                        <div class="pie"></div>
+                    </div>
+                </div>
+            </div><!--modal-body-->
+        </div><!-- modal content -->
+    </div><!-- modal dialog -->
+</div><!-- modal fade -->
+
 
 <div class="modal fade" id="foliomodal" tabindex="-1" role="dialog" aria-labelledby="thatModal">
     <div class="modal-dialog" data-dismiss="modal" aria-label="Close" role="document">
