building js pie chart

--- a/app/index.html
+++ b/app/index.html
@@ -76,7 +76,7 @@
             <script id="dashboard-template" type="text/x-handlebars-template">
                 {{#each dashboard}}
                 <div class="col-md-2 col-sm-3 col-xs-4 openprojectmodal" data-toggle="modal"
-                     data-target="{{target}}" data-name="{{name}}" data-extLink="{{link}}" data-info="{{description}}"
+                     data-target="{{target}}" data-name="{{name}}" data-extLink="{{link}}" data-info="{{description}}" data-pie1="{{pie1}}" data-pie2="{{pie2}}" data-pie3="{{pie3}}" data-pie4="{{pie4}}"
                      data-image="{{filename}}">
                     <img class="img-circle" src="images/inspiration/{{filename}}_tn.jpg" alt="{{name}} photo"/>
                 </div><!-- column -->
